css/pokerole.css
/* ... */
.pokerole.item.sheet .item-control {
  cursor: pointer;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}
.pokerole.item.sheet .item-control:hover {
  color: var(--color-pkmn-red);
}
.pokerole.item.sheet .item-control i {
  margin-right: 3px;
}
.pokerole.item.sheet .effect-group-control {
  cursor: pointer;
  font-weight: bold;
}
.pokerole.item.sheet .effect-group-control:hover {
  color: var(--color-pkmn-red);
}
.pokerole.item.sheet .properties-section {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 15px;
}
.pokerole.item.sheet.move:not(.editable) .window-content > *:not(.move-tooltip) {
  display: none;
}
.pokerole.item.sheet.move.editable .window-content > .move-tooltip {
  display: none;
}

body.theme-light .pokerole.item.sheet:not(.theme-dark),
.pokerole.item.sheet.theme-light {
  --background: #DDD;
}

.move-tooltip {
  display: grid;
  grid-template-columns: 2fr 1fr;
  background: var(--pkmn-type-main-bg);
  color: var(--pkmn-type-text-color);
  font-family: "Prototype", var(--font-body);
  font-size: 10pt;
}
.move-tooltip header {
  grid-column: 1/3;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--pkmn-type-header-bg);
}
.move-tooltip header h2 {
  -webkit-box-flex: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: inherit;
  margin: 0 5px;
  font-family: "Blissful Thinking", var(--font-h2);
}
.move-tooltip header .power-container {
  background: var(--pkmn-type-footer-bg);
  padding: 5px 10px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}
.move-tooltip header .power-container .move-power {
  font-family: "Cafe Nero M54", var(--font-body);
  font-size: 14pt;
}
.move-tooltip header .move-category {
  width: 80px;
}
.move-tooltip section {
  margin: 5px;
  gap: 5px;
}
.move-tooltip section + section {
  margin-left: 0;
}
.move-tooltip section .move-type,
.move-tooltip section .move-category {
  display: inline-block;
  margin-right: 5px;
}
.move-tooltip section.description .label {
  font-family: "Cafe Nero M54", var(--font-body);
  font-size: 8pt;
}
.move-tooltip section.description .label .label-colon {
  font-family: "Prototype", var(--font-body);
}
.move-tooltip section.attributes {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap-reverse;
  flex-wrap: wrap-reverse;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 105px;
  gap: 5px;
  justify-self: end;
}
.move-tooltip section.attributes > * {
  width: 50px;
  height: 50px;
  -webkit-box-flex: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -ms-flex-preferred-size: 50px;
  flex-basis: 50px;
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  position: relative;
}
.move-tooltip section.attributes > * .number {
  position: absolute;
  top: 20px;
  bottom: 5px;
  left: 25px;
  right: 5px;
  text-align: center;
  color: white;
  font-weight: bold;
  font-size: 20px;
}
.move-tooltip section.attributes > *.teal .number {
  color: #6bb9bc;
}
.move-tooltip footer {
  grid-column: 1/3;
  background: var(--pkmn-type-footer-bg);
  min-height: 48px;
}
.move-tooltip footer > * {
  margin: 5px;
}
.move-tooltip footer > * + * {
  margin-top: 0;
}

